# nestedtext

./: .coveragerc  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  LICENSE  README.rst  clean  data.nt  nestedtext.py  pyproject.toml  pytest.ini  setup.py  test_nestedtext.py  test_udif.py  tox.ini  ttt
.github/workflows/: build.yaml
doc/: .gitignore  Makefile  alternatives.rst  api.rst  basic_syntax.rst  basic_use.rst  changelog.rst  clean  comments.rst  common_mistakes.rst  conf.py  examples.rst  exceptions.rst  file_format.rst  format.rst  how_to_use.rst  how_to_write.rst  index.rst  installation.rst  minimal-nestedtext.rst  mistakes.rst  nestedtext.Comment.rst  nestedtext.Location.rst  nestedtext.NestedTextError.rst  nestedtext.dump.rst  nestedtext.dumpers.rst  nestedtext.dumps.rst  nestedtext.load.rst  nestedtext.loaders.rst  nestedtext.loads.rst  nestedtext.utilities.rst  philosophy.rst  python_api.rst  reader.rst  related_projects.rst  releases.rst  requirements.in  requirements.txt  schemas.rst  spell  (+3 more)
examples/: README  address  address.json  address.nt  conftest.py  cryptocurrency  cryptocurrency.nt  cryptocurrency.py  csv-to-nestedtext  deploy.nt  deploy_pydantic.nt  deploy_pydantic.py  deploy_voluptuous.nt  deploy_voluptuous.py  duplicate-keys.nt  fumiko.json  fumiko.nt  github-intent.nt  github-intent.yaml  github-orig.nt  github-orig.yaml  github-rt.yaml  groceries.nt  json-to-nestedtext  michael_jordan.nt  nestedtext-to-json  nestedtext-to-yaml  percent_bachelors_degrees_women_usa.csv  percent_bachelors_degrees_women_usa.nt  postmortem  postmortem.expanded.nt  postmortem.json  postmortem.nt  postmortem.py  rt-yaml  sparekeys.nt  test_examples.py  test_misc.nt  test_misc.py  toml-to-nestedtext  (+2 more)
examples/accumulation/: example.in.nt  example.out.nt  example.py  settings.py  test_read_settings.nt  test_read_settings.py
examples/addresses/: address  address.json  address.nt  address.orig  blue-address
examples/comments/: b01_leading_top.nt  b02_leading_nested.nt  b03_leading_at_value_indent.nt  b04_trailing_simple.nt  b05_header_only.nt  b06_footer_only.nt  b07_grouped_block.nt  b08_blank_separators.nt  round_trip.py  s01a_gapA_blank_between.nt  s01b_gapA_no_blank.nt  s02a_gapB_scalar_eof.nt  s02b_gapB_nested_eof.nt  s03_gapC_after_nested_block.nt  s04_gapC_after_multiline_string.nt  s05_gapC_between_list_items.nt  s06_gapD_after_open_before_nested.nt  s07_gapD_after_open_before_list.nt  s08_gapE_blank_inside_block.nt  s09_gapE_blank_just_before_key.nt  s10_gapF_only_comments.nt  s11_gapG_comment_inside_multiline.nt  s12_outdented_comment.nt  s13_mixed_indent_block.nt  s14_key_trailing.nt
examples/conversion-utilities/: csv-to-nestedtext  dmarc.nt  dmarc.xml  github-intent.nt  github-intent.yaml  github-orig.nt  github-orig.yaml  github-rt.yaml  json-to-nestedtext  nestedtext-to-json  nestedtext-to-tree  nestedtext-to-yaml  rt-yaml  (+3 more)
nestedtext/: __init__.py  __init__.pyi  nestedtext.py  nestedtext.pyi
proposed_tests/: Makefile  README.rst  clean  convert  test_misc.py  test_nt.py  tests.json  tests.nt
tests/: .run-tests.swo  README.rst  clean  json-to-nestedtext  json-to-nxt  json-to-udif  nestedtext-to-json  nestedtext.py  nxt-to-json  run-tests  test_canonical_example.py  test_comments.py  test_constrained_random.py  test_doctests.py  test_extended_codicil.nt  test_inline_comments.py  test_inline_count.py  test_misc.py  test_nestedtext.py  test_official.py  test_rand.py  test_random.py  udif  udif-to-json
udif/: __init__.py  dump.py  load.py
(+217 files in other folders)
