[project]
name = "nestedtext"
version = "3.8"
description = "human readable and writable data interchange format"
readme = "README.rst"
keywords = ["data", "serialization", "json", "yaml"]
authors = [
    {name = "Ken Kundert"},
    {name = "Kale Kundert"},
    {email = "nestedtext@nurdletech.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
requires-python = ">=3.6"
dependencies = [
    "inform>=1.28",
]

[project.urls]
homepage = "https://nestedtext.org"
documentation = "https://nestedtext.org"
repository = "https://github.com/kenkundert/nestedtext"
changelog = "https://github.com/KenKundert/nestedtext/blob/master/doc/releases.rst"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = "--tb=short"

[tool.ruff]
exclude = [".tox", "doc", ".diffs"]

[tool.ruff.lint]
select = ["F"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"nestedtext/__init__.py" = ["F401"]
"examples/parametrize_from_file/test_misc.py" = ["F401"]
